[package]
name = "Rust-bili-live"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
brotli = "7.0"
chrono = { version = "0.4", features = ["clock"] }
cookie = "0.18"
directories = "5.0"
eframe = "0.32"
egui = "0.32"
egui_extras = { version = "0.32", features = ["all_loaders"] }
flate2 = "1.1"
futures-util = "0.3"
hex = "0.4"
http = "1.3"
md5 = "0.8"
prost = "0.13"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "deflate", "gzip", "json", "rustls-tls"] }
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.44", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.27", features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = "0.7"
tonic = { version = "0.12", features = ["transport"] }
url = "2.5"

[build-dependencies]
protoc-bin-vendored = "3.1"
tonic-build = "0.12"
